Implemented error handling Implemented response alert response model Configured logging Added Banner Added Response statuses
